security: Apply security improvements for OAuth2 authentication
- Enable CSRF protection with cookie-based token repository
- Ignore CSRF for OAuth2 endpoints to allow proper authentication flow
- Remove sensitive exception messages from failure handler
- Remove email/name logging from success handler to protect user privacy
- Configure CORS allowed origins via environment variable
- Use generic error message 'authentication_failed' instead of detailed exception